--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
-
-    "date-fns": "^4.1.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.9",
     "jotai": "^2.12.5",
+    "libphonenumber-js": "^1.12.12",
     "lucide-react": "^0.533.0",
     "next": "15.4.3",
     "next-i18next": "^15.4.2",
