--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-use": "^17.6.0",
     "sass": "^1.89.2",
     "swiper": "^11.2.10",
