--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
 # API Configuration
-NEXT_PUBLIC_API_URL=http://63.178.242.103/api
-NEXT_PUBLIC_URL=http://63.178.242.103/
+NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_IMAGE_URL=
+NEXT_PUBLIC_URL=
 # Other configurations
 NEXT_PUBLIC_SITE_NAME="Shtëpia e Lodrave"
 NEXT_PUBLIC_DEFAULT_LANGUAGE=en
+
+# Shop and Vendor IDs
+NEXT_PUBLIC_SHOP_ID=
+NEXT_PUBLIC_VENDOR_ID=
+
+# Testing Mode
+NEXT_PUBLIC_TESTING_MODE=true
