--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "jotai": "^2.12.5",
     "libphonenumber-js": "^1.12.12",
     "lucide-react": "^0.533.0",
-    "next": "15.4.3",
+    "next": "^16.1.0",
     "next-i18next": "^15.4.2",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
