--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_API_URL=https://api.shtepialodrave.com/api
 NEXT_PUBLIC_IMAGE_URL=
 NEXT_PUBLIC_URL=
 # Other configurations
